--- a/DonationClient/src/main/resources/donation/client/views/LoginView.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/LoginView.fxml
@@ -7,6 +7,7 @@
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
@@ -16,32 +17,32 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="744.0" prefWidth="525.0" stylesheets="@../css/LoginStyle.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="donation.client.controllers.LoginController">
+<AnchorPane prefHeight="632.0" prefWidth="473.0" stylesheets="@../css/LoginStyle.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="donation.client.controllers.LoginController">
       <StackPane prefHeight="541.0" prefWidth="414.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <AnchorPane id="LoginWindow" prefHeight="745.0" prefWidth="525.0">
-            <JFXTextField fx:id="textFieldUsername" layoutX="84.0" layoutY="438.0" prefHeight="32.0" prefWidth="257.0" promptText="Username" unFocusColor="#6e6c6c" AnchorPane.leftAnchor="84.0" AnchorPane.rightAnchor="50.0">
+      <AnchorPane id="LoginWindow" prefHeight="745.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <JFXTextField fx:id="textFieldUsername" layoutX="84.0" layoutY="374.0" prefHeight="32.0" prefWidth="257.0" promptText="Username" unFocusColor="#6e6c6c" AnchorPane.bottomAnchor="226.0" AnchorPane.leftAnchor="84.0" AnchorPane.rightAnchor="50.0">
                <font>
                   <Font name="Roboto" size="16.0" />
                </font>
             </JFXTextField>
-            <JFXPasswordField fx:id="textFieldPassword" layoutX="85.0" layoutY="515.0" prefHeight="32.0" prefWidth="257.0" promptText="Password" unFocusColor="#6e6c6c" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="49.0">
+            <JFXPasswordField fx:id="textFieldPassword" layoutX="85.0" layoutY="451.0" prefHeight="32.0" prefWidth="257.0" promptText="Password" unFocusColor="#6e6c6c" AnchorPane.bottomAnchor="149.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="49.0">
                <font>
                   <Font name="Roboto" size="16.0" />
                </font>
             </JFXPasswordField>
-            <JFXButton layoutX="135.0" layoutY="612.0" onAction="#handleLogin" text="Login" textFill="#323232" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="135.0">
+            <JFXButton layoutX="166.0" layoutY="528.0" onAction="#handleLogin" prefHeight="44.0" prefWidth="142.0" styleClass="btn" text="Login" textFill="#323232" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="166.0" AnchorPane.rightAnchor="165.0">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXTextField editable="false" focusColor="#34478000" layoutX="85.0" layoutY="525.0" mouseTransparent="true" prefHeight="25.0" prefWidth="300.0" unFocusColor="#4d4d4d00" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="49.0" />
-            <FontAwesomeIconView fill="#323232" glyphName="USER" layoutX="50.0" layoutY="468.0" size="25" wrappingWidth="12.0" />
-            <FontAwesomeIconView fill="#323232" glyphName="KEY" layoutX="50.0" layoutY="540.0" size="25" wrappingWidth="12.0" />
-            <Hyperlink layoutX="159.0" layoutY="675.0" onAction="#handleRegistration" text="Want to donate? Create new account." />
+            <JFXTextField editable="false" focusColor="#34478000" layoutX="85.0" layoutY="461.0" mouseTransparent="true" prefHeight="25.0" prefWidth="300.0" unFocusColor="#4d4d4d00" AnchorPane.bottomAnchor="146.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="49.0" />
+            <FontAwesomeIconView fill="#323232" glyphName="USER" layoutX="50.0" layoutY="403.0" size="25" wrappingWidth="12.0" AnchorPane.bottomAnchor="224.9402904510498" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="411.0" />
+            <FontAwesomeIconView fill="#323232" glyphName="KEY" layoutX="50.0" layoutY="475.0" size="25" wrappingWidth="12.0" AnchorPane.bottomAnchor="152.9402904510498" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="411.0" />
+            <Hyperlink alignment="CENTER" contentDisplay="CENTER" layoutX="133.0" layoutY="637.0" onAction="#handleRegistration" text="Want to donate? Create new account." AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       </AnchorPane>
-      <AnchorPane id="RegistrationWindow" fx:id="anchorPaneRegistration" prefHeight="745.0" prefWidth="525.0">
-            <Label alignment="CENTER_RIGHT" layoutY="-8.0" prefHeight="143.0" prefWidth="525.0" styleClass="h1" text="New Account" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <VBox layoutY="117.0" prefHeight="561.0" prefWidth="525.0" spacing="40.0" AnchorPane.bottomAnchor="67.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="117.0">
+      <AnchorPane id="RegistrationWindow" fx:id="anchorPaneRegistration" prefHeight="745.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Label alignment="CENTER_RIGHT" layoutY="-8.0" prefHeight="99.0" prefWidth="473.0" styleClass="h1" text="New Account" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <VBox layoutY="84.0" prefHeight="502.0" prefWidth="473.0" spacing="30.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="84.0">
                   <HBox spacing="30.0">
                         <JFXTextField fx:id="textFieldFirstName" prefHeight="32.0" prefWidth="260.0" promptText="First Name" unFocusColor="#6e6c6c">
                            <font>
@@ -55,7 +56,7 @@
                         </JFXTextField>
                   </HBox>
                   <HBox spacing="30.0">
-                        <JFXTextField fx:id="textFieldCNP" prefHeight="32.0" prefWidth="218.0" promptText="CNP" unFocusColor="#6e6c6c">
+                        <JFXTextField fx:id="textFieldCNP" prefHeight="32.0" prefWidth="222.0" promptText="CNP" unFocusColor="#6e6c6c">
                            <font>
                               <Font name="Roboto" size="16.0" />
                            </font>
@@ -75,12 +76,12 @@
                         </JFXTextField>
                   </HBox>
                   <HBox spacing="30.0">
-                        <JFXTextField fx:id="textFieldWeight" prefHeight="32.0" prefWidth="195.0" promptText="Weight (kg)" unFocusColor="#6e6c6c">
+                        <JFXTextField fx:id="textFieldWeight" prefHeight="32.0" prefWidth="204.0" promptText="Weight (kg)" unFocusColor="#6e6c6c">
                            <font>
                               <Font name="Roboto" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField fx:id="textFieldHeight" prefHeight="32.0" prefWidth="192.0" promptText="Height (cm)" unFocusColor="#6e6c6c">
+                        <JFXTextField fx:id="textFieldHeight" prefHeight="32.0" prefWidth="210.0" promptText="Height (cm)" unFocusColor="#6e6c6c">
                            <font>
                               <Font name="Roboto" size="16.0" />
                            </font>
@@ -91,9 +92,9 @@
                            </font>
                         </JFXTextField>
                   </HBox>
-                  <JFXTextArea fx:id="textAreaHomeAddress" prefHeight="66.0" prefWidth="465.0" promptText="Home Address" />
+                  <JFXTextArea fx:id="textAreaHomeAddress" prefHeight="53.0" prefWidth="413.0" promptText="Home Address" />
                   <VBox>
-                        <JFXTextArea fx:id="textAreaResidenceAddress" prefHeight="66.0" prefWidth="465.0" promptText="Residence Address (From ID Card)" />
+                        <JFXTextArea fx:id="textAreaResidenceAddress" prefHeight="57.0" prefWidth="413.0" promptText="Residence Address (From ID Card)" />
                         <JFXCheckBox fx:id="checkBoxResidence" prefWidth="475.0" text="Same as home address">
                            <VBox.margin>
                               <Insets top="15.0" />
@@ -104,10 +105,14 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </padding>
             </VBox>
-            <JFXButton layoutX="307.0" layoutY="669.0" prefHeight="44.0" prefWidth="183.0" text="Sign Up" />
-            <JFXButton graphicTextGap="15.0" layoutX="35.0" layoutY="46.0" onAction="#handleBack" prefHeight="51.0" prefWidth="121.0" text="Back">
+            <JFXButton layoutX="307.0" layoutY="669.0" prefHeight="44.0" prefWidth="183.0" styleClass="btn" text="Sign Up" AnchorPane.bottomAnchor="31.0" AnchorPane.rightAnchor="35.0" />
+            <JFXButton graphicTextGap="15.0" layoutX="28.0" layoutY="35.0" onAction="#handleBack" prefHeight="37.0" prefWidth="84.0" text="Back" AnchorPane.leftAnchor="28.0" AnchorPane.topAnchor="35.0">
                <graphic>
-                  <FontAwesomeIconView fill="WHITE" glyphName="ANGLE_LEFT" size="30" />
-               </graphic></JFXButton>
+                  <FontAwesomeIconView fill="WHITE" glyphName="ANGLE_LEFT" size="25" />
+               </graphic>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn-back" />
+         </styleClass></JFXButton>
       </AnchorPane>
 </AnchorPane>
