--- a/DonationClient/src/main/resources/donation/client/views/LoginView.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/LoginView.fxml
@@ -20,12 +20,12 @@
 <AnchorPane prefHeight="632.0" prefWidth="473.0" stylesheets="@../css/LoginStyle.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="donation.client.controllers.LoginController">
       <StackPane prefHeight="541.0" prefWidth="414.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <AnchorPane id="LoginWindow" prefHeight="745.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <JFXTextField fx:id="textFieldUsername" layoutX="84.0" layoutY="374.0" prefHeight="32.0" prefWidth="257.0" promptText="Username" unFocusColor="#6e6c6c" AnchorPane.bottomAnchor="226.0" AnchorPane.leftAnchor="84.0" AnchorPane.rightAnchor="50.0">
+            <JFXTextField fx:id="textFieldUsername" layoutX="84.0" layoutY="374.0" onAction="#handleLogin" prefHeight="32.0" prefWidth="257.0" promptText="Username" unFocusColor="#6e6c6c" AnchorPane.bottomAnchor="226.0" AnchorPane.leftAnchor="84.0" AnchorPane.rightAnchor="50.0">
                <font>
                   <Font name="Roboto" size="16.0" />
                </font>
             </JFXTextField>
-            <JFXPasswordField fx:id="textFieldPassword" layoutX="85.0" layoutY="451.0" prefHeight="32.0" prefWidth="257.0" promptText="Password" unFocusColor="#6e6c6c" AnchorPane.bottomAnchor="149.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="49.0">
+            <JFXPasswordField fx:id="textFieldPassword" layoutX="85.0" layoutY="451.0" onAction="#handleLogin" prefHeight="32.0" prefWidth="257.0" promptText="Password" unFocusColor="#6e6c6c" AnchorPane.bottomAnchor="149.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="49.0">
                <font>
                   <Font name="Roboto" size="16.0" />
                </font>
@@ -40,7 +40,7 @@
             <FontAwesomeIconView fill="#323232" glyphName="KEY" layoutX="50.0" layoutY="475.0" size="25" wrappingWidth="12.0" AnchorPane.bottomAnchor="152.9402904510498" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="411.0" />
             <Hyperlink alignment="CENTER" contentDisplay="CENTER" layoutX="133.0" layoutY="637.0" onAction="#handleRegistration" text="Want to donate? Create new account." AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       </AnchorPane>
-      <AnchorPane id="RegistrationWindow" fx:id="anchorPaneRegistration" prefHeight="745.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane id="RegistrationWindow" fx:id="anchorPaneRegistration" prefHeight="745.0" prefWidth="473.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <Label alignment="CENTER_RIGHT" layoutY="-8.0" prefHeight="99.0" prefWidth="473.0" styleClass="h1" text="New Account" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <VBox layoutY="84.0" prefHeight="502.0" prefWidth="473.0" spacing="30.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="84.0">
                   <HBox spacing="30.0">
