implemented register and update profile

--- a/DonationClient/src/main/resources/donation/client/views/DonorView.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/DonorView.fxml
@@ -162,43 +162,43 @@
                                        <children>
                                           <HBox alignment="TOP_CENTER" spacing="30.0">
                                              <children>
-                                                <JFXTextField prefHeight="25.0" prefWidth="291.0" promptText="First Name" />
-                                                <JFXTextField prefHeight="25.0" prefWidth="315.0" promptText="Last Name" />
+                                                <JFXTextField fx:id="textFieldFirstName" prefHeight="25.0" prefWidth="291.0" promptText="First Name" />
+                                                <JFXTextField fx:id="textFieldLastName" prefHeight="25.0" prefWidth="315.0" promptText="Last Name" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="TOP_CENTER" spacing="30.0">
                                              <children>
-                                                <JFXTextField prefHeight="25.0" prefWidth="291.0" promptText="CNP" />
-                                                <JFXDatePicker prefHeight="29.0" prefWidth="317.0" promptText="Birth Date" />
+                                                <JFXTextField fx:id="textFieldCNP" prefHeight="25.0" prefWidth="291.0" promptText="CNP" />
+                                                <JFXDatePicker fx:id="datePickerBirthDate" prefHeight="29.0" prefWidth="317.0" promptText="Birth Date" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="TOP_CENTER" spacing="30.0">
                                              <children>
-                                                <JFXTextField prefHeight="25.0" prefWidth="291.0" promptText="E-mail" />
-                                                <JFXTextField prefHeight="25.0" prefWidth="315.0" promptText="Phone" />
+                                                <JFXTextField fx:id="textFieldEmail" prefHeight="25.0" prefWidth="291.0" promptText="E-mail" />
+                                                <JFXTextField  fx:id="textFieldPhone" prefHeight="25.0" prefWidth="315.0" promptText="Phone" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="TOP_CENTER" spacing="30.0">
                                              <children>
-                                                <JFXTextField prefHeight="29.0" prefWidth="133.0" promptText="Weight (kg)" />
-                                                <JFXTextField prefHeight="29.0" prefWidth="131.0" promptText="Height (cm)" />
-                                                <JFXTextField prefHeight="29.0" prefWidth="317.0" promptText="Nationality" />
+                                                <JFXTextField fx:id="textFieldWeight" prefHeight="29.0" prefWidth="133.0" promptText="Weight (kg)" />
+                                                <JFXTextField fx:id="textFieldHeight" prefHeight="29.0" prefWidth="131.0" promptText="Height (cm)" />
+                                                <JFXTextField fx:id="textFieldNationality" prefHeight="29.0" prefWidth="317.0" promptText="Nationality" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="TOP_CENTER" spacing="30.0">
                                              <children>
-                                                <JFXTextArea prefHeight="46.0" prefWidth="641.0" promptText="Home Address" />
+                                                <JFXTextArea fx:id="textAreaHomeAddress" prefHeight="46.0" prefWidth="641.0" promptText="Home Address" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="CENTER" spacing="30.0">
                                              <children>
-                                                <JFXTextArea prefHeight="46.0" prefWidth="464.0" promptText="Residence Address" />
-                                                <JFXCheckBox contentDisplay="TOP" text="Same as home address" />
+                                                <JFXTextArea fx:id="textAreaResidenceAddress" prefHeight="46.0" prefWidth="464.0" promptText="Residence Address" />
+                                                <JFXCheckBox fx:id="checkBoxResidenceAddress" contentDisplay="TOP" text="Same as home address" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="CENTER" spacing="30.0">
                                              <children>
-                                                <JFXButton prefHeight="44.0" prefWidth="149.0" styleClass="btn" text="Modifica" />
+                                                <JFXButton onAction="#handleUpdateDonorProfile" prefHeight="44.0" prefWidth="149.0" styleClass="btn" text="Modifica" />
                                              </children>
                                           </HBox>
                                        </children>
