--- a/DonationClient/src/main/resources/donation/client/views/LoginView.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/LoginView.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="632.0" prefWidth="473.0" stylesheets="@../css/LoginStyle.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="donation.client.controllers.LoginController">
+<AnchorPane prefHeight="632.0" prefWidth="473.0" stylesheets="@../css/LoginStyle.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="donation.client.controllers.LoginController">
       <StackPane prefHeight="541.0" prefWidth="414.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <AnchorPane id="LoginWindow" prefHeight="745.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <JFXTextField fx:id="textFieldUsername" layoutX="84.0" layoutY="374.0" onAction="#handleLogin" prefHeight="32.0" prefWidth="257.0" promptText="Username" unFocusColor="#6e6c6c" AnchorPane.bottomAnchor="226.0" AnchorPane.leftAnchor="84.0" AnchorPane.rightAnchor="50.0">
@@ -45,12 +45,12 @@
             <VBox layoutY="84.0" prefHeight="517.0" prefWidth="473.0" spacing="30.0" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="84.0">
          <HBox spacing="30.0">
             <children>
-               <JFXTextField fx:id="textFieldFirstName1" prefHeight="32.0" prefWidth="260.0" promptText="Username" unFocusColor="#6e6c6c">
+               <JFXTextField fx:id="textFieldRegisterUsername" prefHeight="32.0" prefWidth="260.0" promptText="Username" unFocusColor="#6e6c6c">
                   <font>
                      <Font name="Roboto" size="16.0" />
                   </font>
                </JFXTextField>
-               <JFXTextField fx:id="textFieldLastName1" prefHeight="32.0" prefWidth="257.0" promptText="Password" unFocusColor="#6e6c6c">
+               <JFXTextField fx:id="textFieldRegisterPassword" prefHeight="32.0" prefWidth="257.0" promptText="Password" unFocusColor="#6e6c6c">
                   <font>
                      <Font name="Roboto" size="16.0" />
                   </font>
@@ -119,7 +119,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </padding>
             </VBox>
-            <JFXButton layoutX="307.0" layoutY="669.0" prefHeight="44.0" prefWidth="183.0" styleClass="btn" text="Sign Up" AnchorPane.bottomAnchor="31.0" AnchorPane.rightAnchor="35.0" />
+            <JFXButton layoutX="307.0" layoutY="669.0" onAction="#handleSignUp" prefHeight="44.0" prefWidth="183.0" styleClass="btn" text="Sign Up" AnchorPane.bottomAnchor="31.0" AnchorPane.rightAnchor="35.0" />
             <JFXButton graphicTextGap="15.0" layoutX="28.0" layoutY="35.0" onAction="#handleBack" prefHeight="37.0" prefWidth="84.0" text="Back" AnchorPane.leftAnchor="28.0" AnchorPane.topAnchor="35.0">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="ANGLE_LEFT" size="25" />
