--- a/DonationClient/src/main/resources/donation/client/views/DonorView.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/DonorView.fxml
@@ -30,7 +30,7 @@
 
 <AnchorPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="donation.client.controllers.DonorController">
    <children>
-      <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <StackPane fx:id="stackPaneContent" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
@@ -175,7 +175,7 @@
                                           <HBox alignment="TOP_CENTER" spacing="30.0">
                                              <children>
                                                 <JFXTextField fx:id="textFieldEmail" prefHeight="25.0" prefWidth="291.0" promptText="E-mail" />
-                                                <JFXTextField  fx:id="textFieldPhone" prefHeight="25.0" prefWidth="315.0" promptText="Phone" />
+                                                <JFXTextField fx:id="textFieldPhone" prefHeight="25.0" prefWidth="315.0" promptText="Phone" />
                                              </children>
                                           </HBox>
                                           <HBox alignment="TOP_CENTER" spacing="30.0">
@@ -198,7 +198,7 @@
                                           </HBox>
                                           <HBox alignment="CENTER" spacing="30.0">
                                              <children>
-                                                <JFXButton onAction="#handleUpdateDonorProfile" prefHeight="44.0" prefWidth="149.0" styleClass="btn" text="Modifica" />
+                                                <JFXButton onAction="#handleUpdateDonorProfile" prefHeight="44.0" prefWidth="149.0" styleClass="btn" text="Update" />
                                              </children>
                                           </HBox>
                                        </children>
